# kakia

./: .env-example  .gitignore  README.md  pyproject.toml
kak_ia/: main.py
kak_ia/components/: gtts.py  ptts.py  savescraped.py  topicfilter.py
kak_ia/core/: assistant.py  commands.py  config.py  database.py  voicer.py
kak_ia/models/: scraped.py
kak_ia/modules/: caching.py  commands.py  logging.py  voicer.py  webscraping.py
kak_ia/schemas/: scraped.py
