[tool.poetry]
name = "kak-ia"
version = "1.0.0"
description = "Assistente de IA."
authors = ["afiovinicius <afiovinicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
speechrecognition = "^3.11.0"
pyttsx3 = "^2.98"
pyaudio = "^0.2.14"
langchain = "^0.3.4"
langchain-core = "^0.3.12"
langchain-groq = "^0.2.0"
comtypes = "^1.4.7"
logging = "^0.4.9.6"
gtts = "^2.5.3"
scrapy = "^2.11.2"
redis = "^5.1.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
ollama = "^0.3.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
blue = "^0.9.1"
ruff = "^0.7.0"
httpx = "^0.27.2"
requests = "^2.32.3"
isort = "^5.13.2"
ignr = "^2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"

[tool.taskipy.tasks]
run = 'python3 kak_ia/main.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
